--- a/config/integrations/light.yaml
+++ b/config/integrations/light.yaml
@@ -1,43 +1,1 @@
-light:
-  - platform: switch
-    entity_id: switch.basement_desk_lamp
-    name: Basement desk lamp
-  - platform: switch
-    entity_id: switch.aeotec_cord
-    name: Porch string
-  - platform: switch
-    entity_id: switch.barn_back_flood_lights
-    name: Barn back floodlight
-  - platform: switch
-    entity_id: switch.barn_front_down_lights
-    name: Barn front lights
-  - platform: switch
-    entity_id: switch.christmas_tree
-    name: Christmas tree lights
-  - platform: switch
-    entity_id: switch.end_table_lamp
-    name: Living room end table
-  - platform: switch
-    entity_id: switch.flood_back
-    name: Back floodlight
-  - platform: switch
-    entity_id: switch.flood_garage
-    name: Garage floodlight
-  - platform: switch
-    entity_id: switch.flood_side
-    name: Side floodlight
-  - platform: switch
-    entity_id: switch.front_room_floor_lamp
-    name: Front room floor lamp
-  - platform: switch
-    entity_id: switch.living_room_floor_lamp
-    name: Living room floor lamp
-  - platform: switch
-    entity_id: switch.zw_patio_lights
-    name: Patio lights
-  - platform: switch
-    entity_id: switch.spare_room_dresser
-    name: Spare room dresser lamp
-  - platform: switch
-    entity_id: switch.zw_spare_room_lamp
-    name: Spare room nightstand lamp
+light: !include_dir_merge_list ../entities/light
