--- a/config/dashboards/dashboards.yaml
+++ b/config/dashboards/dashboards.yaml
@@ -11,6 +11,7 @@ ui-primary:
   icon: mdi:head-cog
   show_in_sidebar: true
   filename: dashboards/ui-primary/dashboard.yaml
+  require_admin: true
 
 ui-minimal:
   mode: yaml
@@ -18,3 +19,10 @@ ui-minimal:
   icon: mdi:head-cog
   show_in_sidebar: true
   filename: dashboards/ui-minimal/dashboard.yaml
+
+ui-kids:
+  mode: yaml
+  title: Kids
+  icon: mdi:head-cog
+  show_in_sidebar: true
+  filename: dashboards/ui-kids/dashboard.yaml
