--- a/config/integrations/lovelace.yaml
+++ b/config/integrations/lovelace.yaml
@@ -1,21 +1,12 @@
----
 # Lovelace component for confuring the UI.
-#
-# I use Lovelace  in both storage mode, but I add some additional dashboards
-# manually in YAML mode. Reasoning for this is quite simple: I suck at UI stuff.
-#
-# This way, my main dashboard is controlled via the UI. This covers my main
-# needs for the house quick and easy, while I slowly learn more about the
-# purely YAML versions.
-#
-# Maybe somewhere in the future I can replace the storage managed dashboards
-# with a YAML version, or, dunno, replace everything with storage versions.
 #
 # https://www.home-assistant.io/lovelace/
 # https://www.home-assistant.io/lovelace/dashboards-and-views
 #
 lovelace:
-  # Either 'yaml' or 'storage'
+  # Either 'yaml' or 'storage'. I'm specifying storage here so I have one
+  # 'Overview' dashboard that's configurable via the UI for quick messing
+  # around. More permanent YAML dashboards are stored in ../dashboards.
   mode: storage
 
   # YAML dashboards are stored here:
