--- a/config/entities/light/switches.yaml
+++ b/config/entities/light/switches.yaml
@@ -32,7 +32,7 @@
   name: Living room end table
 
 - platform: switch
-  entity_id: switch.flood_back
+  entity_id: switch.zw_flood_back
   name: Back floodlight
 
 - platform: switch
@@ -40,7 +40,7 @@
   name: Garage floodlight
 
 - platform: switch
-  entity_id: switch.flood_side
+  entity_id: switch.zw_flood_side
   name: Side floodlight
 
 - platform: switch
