Add ryobi_gdo3 custom component

--- a/.stubs/secrets.yaml
+++ b/.stubs/secrets.yaml
@@ -39,3 +39,9 @@ microsoft_speech_api_key: a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0
 
 # API key for OctoPrint
 octoprint_api_key: a0a0a0a0a0aa0a0
+
+# Ryobi GDO secrets
+ryobi_username: "user@example.com"
+ryobi_password: "passw0rd"
+ryobi_door1_id: "00000a000aaa000ff0000000"
+ryobi_door2_id: "00000a000aaa000ff0000000"
