--- a/config/custom_components/unifiprotect/manifest.json
+++ b/config/custom_components/unifiprotect/manifest.json
@@ -2,9 +2,10 @@
   "domain": "unifiprotect",
   "name": "Unifi Protect",
   "documentation": "https://github.com/briis/unifiprotect",
+  "issue_tracker": "https://github.com/briis/unifiprotect/issues",
   "config_flow": true,
   "requirements": [
-    "pyunifiprotect==0.26.8"
+    "pyunifiprotect==0.29.1"
   ],
   "dependencies": [],
   "codeowners": [
