--- a/config/dashboards/ui-kids/views/main.yaml
+++ b/config/dashboards/ui-kids/views/main.yaml
@@ -8,7 +8,7 @@ cards:
 
       - type: horizontal-stack
         cards:
-          - entity: switch.front_room_floor_lamp
+          - entity: switch.zw_front_room_floor_lamp
             hold_action:
               action: more-info
             icon_height: 36px
@@ -36,7 +36,7 @@ cards:
       - type: horizontal-stack
         cards:
           - type: button
-            entity: light.sofa_lights
+            entity: light.zw_sofa_lights
             hold_action:
               action: more-info
             icon: 'mdi:wall-sconce-flat'
@@ -48,7 +48,7 @@ cards:
               action: toggle
 
           - type: button
-            entity: switch.end_table_lamp
+            entity: switch.zw_living_room_end_table_lamp
             hold_action:
               action: more-info
             icon: 'mdi:lamp'
@@ -77,7 +77,7 @@ cards:
       - type: horizontal-stack
         cards:
           - type: button
-            entity: light.porch_lights
+            entity: light.zw_porch_lights
             hold_action:
               action: more-info
             icon: 'mdi:dome-light'
@@ -89,7 +89,7 @@ cards:
               action: toggle
 
           - type: button
-            entity: light.front_entry_lights
+            entity: light.zw_front_entry_lights
             hold_action:
               action: more-info
             icon: 'mdi:coach-lamp'
@@ -101,7 +101,7 @@ cards:
               action: toggle
 
           - type: button
-            entity: switch.aeotec_cord
+            entity: switch.zw_porch_string_lights
             hold_action:
               action: more-info
             icon: 'mdi:string-lights'
@@ -115,7 +115,7 @@ cards:
       - type: horizontal-stack
         cards:
           - type: button
-            entity: switch.zw_patio_lights
+            entity: switch.zw_patio_light
             hold_action:
               action: more-info
             icon: 'mdi:coach-lamp'
@@ -156,7 +156,7 @@ cards:
       - type: horizontal-stack
         cards:
           - type: button
-            entity: switch.zw_flood_back
+            entity: switch.zw_back_floodlight
             hold_action:
               action: more-info
             icon: 'mdi:car-light-high'
@@ -180,7 +180,7 @@ cards:
               action: toggle
 
           - type: button
-            entity: switch.zw_flood_side
+            entity: switch.zw_side_floodlight
             hold_action:
               action: more-info
             icon: 'mdi:car-light-high'
