--- a/config/dashboards/ui-primary/views/main.yaml
+++ b/config/dashboards/ui-primary/views/main.yaml
@@ -360,7 +360,7 @@ cards:
         cards:
           - type: button
             name: Back
-            entity: switch.zw_back_floodlight
+            entity: switch.zw_back_floodlight_microswitch
             hold_action:
               action: more-info
             icon: 'mdi:car-light-high'
@@ -383,7 +383,7 @@ cards:
               action: toggle
 
           - type: button
-            entity: switch.zw_side_floodlight
+            entity: switch.zw_side_floodlight_microswitch
             hold_action:
               action: more-info
             icon: 'mdi:car-light-high'
