--- a/config/automations/motion.yaml
+++ b/config/automations/motion.yaml
@@ -8,7 +8,7 @@
     data:
       entity_id: light.zw_basement_stair_lights
       brightness_pct: 40
-  mode: single
+  mode: restart
 
 - alias: Turn off basement stairs light after motion end
   trigger:
