--- a/config/dashboards/ui-primary/views/main.yaml
+++ b/config/dashboards/ui-primary/views/main.yaml
@@ -143,7 +143,7 @@ cards:
               action: toggle
 
           - type: button
-            entity: switch.spare_room_dresser
+            entity: light.spare_room_dresser_lamp
             hold_action:
               action: more-info
             icon: 'mdi:lamp'
