--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -4,7 +4,6 @@
 # of closely-related things. This configuration.yaml file bootstraps
 # the setup by loading each integration from its file in the
 # /config/integrations folder.
-#
 
 # Configure a default setup of Home Assistant (frontent, api, etc)
 default_config:
@@ -26,7 +25,42 @@ homeassistant:
   time_zone: !secret timezone
 
   # Customize individual entity display names, icons, etc.
-  customize: !include_dir_merge_named customizations/entities
+  customize: !include_dir_merge_named customizations
 
   # Load packages for everything else
-  packages: !include_dir_named integrations
+  packages: !include_dir_named packages
+
+# Configures the official Home Assistant frontend.
+# https://www.home-assistant.io/integrations/frontend/
+frontend:
+  themes: !include_dir_merge_named themes
+
+# The System Health component provides an API to offer information
+# on the system and its components.
+system_health: ~
+
+# Configures the maximum number of entries in the system log.
+system_log:
+  max_entries: 200
+
+# This include allows for UI-base automations.
+automation: !include automations.yaml
+
+# This one loads automations defined here in YAML.
+automation mine: !include_dir_merge_list automations
+
+# This include is for the scene editor/UI
+scene: !include scenes.yaml
+
+# This include covers any YAML scenes defined here.
+scene mine: !include_dir_merge_list scenes
+
+# Add entity-specific configurations
+group: !include_dir_merge_named entities/groups
+binary_sensor: !include_dir_list entities/binary_sensors
+input_select: !include_dir_named entities/input_select
+cover: !include_dir_merge_list entities/covers
+light: !include_dir_merge_list entities/lights
+
+# Add scripts
+script: !include_dir_named scripts
